refactor: remove deprecated search-related classes and integrate SearchServiceClient for product search functionality